@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Change interface url
+* Print each phone on new line
 * Parse command line for console app
 * Add requests module to dependencies
 * Add parsing of data
